# PIprojectBackend

./: .pdm-python  pyproject.toml
ControlePedidos/: admin.py  apps.py  models.py  serializers.py  views.py
ControlePedidos/migrations/: 0001_initial.py
config/: settings.py  urls.py
